@@ -59,12 +59,12 @@ public record Range(long from, long to) {
 				.map(x -> ((List<?>) Json.parse(x)).stream().map(y -> (Range) c.convert(y, Range.class)).toList())
 				.collect(Collectors.toCollection(ArrayList::new));
 
-		if (in.get(in.size() - 1).isEmpty()) {
-			var r = ThreadLocalRandom.current();
+		if (in.getLast().isEmpty()) {
+			var tlr = ThreadLocalRandom.current();
 			var irr = new ArrayList<Range>();
 			for (var i = 0; i < 5; i++) {
-				var f = r.nextInt(l);
-				var t = r.nextInt(f, l) + 1;
+				var f = tlr.nextInt(l);
+				var t = tlr.nextInt(f, l) + 1;
 				irr.add(new Range(f, t));
 			}
 			in.set(in.size() - 1, irr);
